feat: Add setFavorite function with background sync and postMessage

--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -102,7 +102,7 @@
   </div> <!-- End page -->
 
   <section id="overlay" class="layer" role="dialog" aria-hidden="true">
-    <form>
+    <form name="review">
       <p><button type="button" tabindex="-1" id="close-overlay-button" aria-label="Close">✖</button></p>
       <p><label for="username">What's your name?</label> <input id="username" name="username" type="text" placeholder="Your first name" minlength="2" maxlength="50" required autocomplete="given-name"></p>
       <fieldset>
